<resources>
    <string name="app_name">yearlylist</string>
    <string name="my_list">Listani</string>
    <string name="overview">Yleisnäkymä</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_saved">New item saved!</string>
    <string name="delete">Delete?</string>
    <string name="delete_dialog_message">Do you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mark_item_done">Mark item done</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="hobbies">Hobbies</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="title">Title</string>
    <string name="item_done">Item done!</string>
</resources>
