<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".AddItemActivity">

    <EditText
            android:background="@drawable/edit_text_bg"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/title_editbox"
            android:hint="Title" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="68dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:background="@drawable/edit_text_bg"
            android:hint="@string/description"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:id="@+id/desc_editbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textPersonName|textMultiLine"
            android:lines="20"
            android:minLines="5"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/title_editbox"/>
    <Button
            android:text="@string/create"
            android:onClick="createItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginEnd="162dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="162dp"
            android:layout_marginTop="288dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/item_done"
            android:id="@+id/draggable_item" android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="173dp" android:layout_marginBottom="302dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.22000003"/>
    <TextView
            android:text="@string/hobbies"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"
            android:textAlignment="center"
            android:padding="30dp"
            android:background="@drawable/drop_area_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drop_area_hobbies" app:layout_constraintEnd_toStartOf="@+id/drop_area_other"
            android:layout_marginEnd="23dp" app:layout_constraintStart_toEndOf="@+id/drop_area_work"
            android:layout_marginStart="25dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/work"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"
            android:textAlignment="center"
            android:padding="30dp"
            android:background="@drawable/drop_area_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drop_area_work" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/other"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"
            android:textAlignment="center"
            android:padding="30dp"
            android:background="@drawable/drop_area_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drop_area_other" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>